# paperboy-tui

./: Cargo.toml  LICENSE  README.md
crates/tui-line-editor/: Cargo.toml  README.md
crates/tui-line-editor/src/: lib.rs
crates/tui-panel-select/: Cargo.toml  README.md
crates/tui-panel-select/src/: clipboard.rs  lib.rs  multiselect.rs  panel.rs  scrollbar.rs  selection.rs  terminal.rs  wrap.rs  wrapcache.rs
crates/tui-rgb-picker/: Cargo.toml  README.md
crates/tui-rgb-picker/src/: lib.rs
